--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                 <input type="text" id="input-box" placeholder="Add your task">
                 <button>Add</button>
             </div>
+            <ul id="task-container">
+            </ul>
         </div>
     </div>
 </body>
