Add script line for javascript

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
             <h2>To-Do List <img src="images/icon.png"></h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your task">
-                <button>Add</button>
+                <button onclick="addTask()">Add</button>
             </div>
             <ul id="task-container">
             </ul>
         </div>
     </div>
+<script src="script.js"></script>
 </body>
 </html>
